--- a/style.css
+++ b/style.css
@@ -42,12 +42,13 @@
   border-radius: 50%;
   filter:blur(120px);
   opacity:0.35;
+  z-index: 1;
   animation: floatNebula 40s infinite alternate ease-in-out;
 
   
-  /*background: radial-gradient(circle at 20% 30%, rgba(255, 0, 150, 0.3), transparent 40%),
+  background: radial-gradient(circle at 20% 30%, rgba(255, 0, 150, 0.3), transparent 40%),
               radial-gradient(circle at 80% 70%, rgba(0, 200, 255, 0.3), transparent 40%),
-              radial-gradient(circle at 50% 50%, rgba(150, 0, 255, 0.2), transparent 50%);*/
+              radial-gradient(circle at 50% 50%, rgba(150, 0, 255, 0.2), transparent 50%);
 }
 
 /*.light #nebula {
@@ -57,22 +58,22 @@
 }*/
 
 .nebula-1{
-  background:radial-gradient(circle at 30% 40%, #7f00ff, transparent 70%);
+  background:radial-gradient(circle at 30% 40%, #7005ae, transparent 70%);
   top:-20%;
   left:-20%;
 }
 .nebula-2{
-  background:radial-gradient(circle,#00c6ff, transparent 70%);
+  background:radial-gradient(circle,#91047b, transparent 70%);
   bottom:-30%;
   right:-20%;
-  animation-duration:55s
+  animation-duration:10s;
 }
 
 .nebula-3{
-  background:radial-gradient(circle,#ff0080,transparent 70%);
+  background:radial-gradient(circle,#024f82,transparent 70%);
   top: 30%;
   left: 40%;
-  animation-duration: 65s;
+  animation-duration: 10s;
 
 }
 
@@ -85,6 +86,3 @@
   }
 }
 
-* {
-  background-image: none !important;
-}
